--- a/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/layout/activity_home__screen.xml
+++ b/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/layout/activity_home__screen.xml
@@ -53,6 +53,7 @@
                 android:layout_weight=".25"
                 android:background="@color/darkBlue"
                 android:onClick="setGoToPreMatch"
+                android:textColor="@color/white"
                 android:text=">"
                 android:textSize="30dp"
 
@@ -98,6 +99,7 @@
                 android:layout_weight=".25"
                 android:background="@color/mediumBlue"
                 android:onClick="setGoToGenQR"
+                android:textColor="@color/white"
                 android:text=">"
                 android:textSize="30dp"
 
@@ -142,7 +144,8 @@
                 android:layout_height="fill_parent"
                 android:layout_weight=".25"
                 android:background="@color/lightBlue"
-                android:onClick="setGoToPreMatch"
+                android:onClick="setGoToMasterScanner"
+                android:textColor="@color/white"
                 android:text=">"
                 android:textSize="30dp"
 
@@ -188,6 +191,7 @@
                 android:layout_weight=".25"
                 android:background="@color/lighterBlue"
                 android:onClick="setGoToSettings"
+                android:textColor="@color/white"
                 android:text=">"
                 android:textSize="30dp"
 
