--- a/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/layout/activity_master_scanner.xml
+++ b/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/layout/activity_master_scanner.xml
@@ -14,22 +14,22 @@
         android:orientation="vertical"
         >
 
-        <LinearLayout
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-        <Button
-            android:id="@+id/generateCSV"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="60dp"
-            android:layout_marginRight="60dp"
-            android:background="@drawable/blue_rounded_button"
-            android:onClick="setScanQRCode"
-            android:text="Scan QR Code" />
+            android:layout_height="48dp"
+            android:paddingLeft="8dp"
+            android:paddingTop="4dp"
+            android:text="Master Scanner"
+            android:textSize="30dp" />
 
-        >
-        </LinearLayout>
+
+
+
+
+
+
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -37,15 +37,30 @@
             android:gravity="center|bottom"
             android:orientation="vertical">
 
+            <Button
+                android:id="@+id/generateCSV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:layout_marginRight="50dp"
+                android:layout_marginBottom="32dp"
+                android:background="@drawable/blue_rounded_button"
+                android:onClick="setGenerateCSV"
+                android:text="Generate CSV File"
+                android:textColor="@color/white"
+                android:visibility="invisible"
+                />
+
 
             <Button
                 android:id="@+id/scanQRCode"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="60dp"
-                android:layout_marginRight="60dp"
+                android:layout_marginLeft="50dp"
+                android:layout_marginRight="50dp"
                 android:background="@drawable/blue_rounded_button"
                 android:onClick="setScanQRCode"
+                android:textColor="@color/white"
                 android:text="Scan QR Code" />
 
 
