--- a/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/layout/activity_pre_match.xml
+++ b/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/layout/activity_pre_match.xml
@@ -106,6 +106,7 @@
                 android:layout_weight=".3"
                 android:background="@drawable/alliance_toggle"
                 android:onClick="setAllianceColor"
+                android:textColor="@color/white"
                 android:textOff="Blue"
                 android:textOn="Red"
 
@@ -138,6 +139,7 @@
                     android:background="@color/lightBlue"
                     android:onClick="setGoToAuton"
                     android:text="Start Scouting"
+                    android:textColor="@color/white"
                     />
 
             </LinearLayout>
