--- a/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/layout/activity_qrcreator.xml
+++ b/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/layout/activity_qrcreator.xml
@@ -12,8 +12,6 @@
         android:layout_marginRight="2dp"
         android:orientation="vertical">
 
-
-
         <TextView
             android:layout_width="match_parent"
             android:layout_height="48dp"
@@ -33,22 +31,19 @@
                 android:id="@+id/border"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@color/black"
                 android:padding="5dp"
                 android:layout_marginBottom="70dp"
-                android:visibility="invisible"
-
                 >
 
             <ImageView
                 android:id="@+id/qrCode"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@color/lightBlue"
                 android:onClick="setGenQRCode"
 
                 />
-            </LinearLayout>
+            </LinearLayout> <!--QR ImageView-->
+
             <Button
                 android:id="@+id/genQRCode"
                 android:layout_width="match_parent"
@@ -58,8 +53,7 @@
                 android:background="@drawable/blue_rounded_button"
                 android:onClick="setGenQRCode"
                 android:textColor="@color/white"
-                android:text="Generate QR Code" />
-
+                android:text="Generate QR Code" /> !--Generate QR Button-->
 
             <ImageView
                 android:layout_width="match_parent"
