--- a/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/layout/activity_settings.xml
+++ b/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/layout/activity_settings.xml
@@ -16,12 +16,15 @@
         android:orientation="vertical"
         >
         <TextView
+            android:id="@+id/revokeStill"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:paddingLeft="8dp"
             android:paddingTop="4dp"
             android:text="Settings"
-            android:textSize="30dp" />
+            android:textSize="30dp"
+            android:onClick="setRevokeStill"
+            />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -69,6 +72,55 @@
             android:background="@color/background_material" />
 
         <LinearLayout
+            android:id="@+id/adminUnlock"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_corners_chunk_material"
+            android:orientation="horizontal"
+            android:paddingBottom="10dp"
+            android:paddingLeft="11dp"
+            android:paddingRight="4dp"
+            android:paddingTop="10dp"
+
+            >
+
+            <EditText
+                android:id="@+id/password"
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_gravity="center"
+                android:layout_marginRight="8dp"
+                android:layout_weight=".7"
+                android:background="@color/white"
+                android:hint="Admin Password"
+                android:maxLength="6"
+                android:textSize="28dp"
+                android:inputType="numberPassword"
+                android:padding="5dp"
+                android:textColor="@color/textMedium" />
+
+            <Button
+                android:id="@+id/submitPassword"
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_weight=".3"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:background="@drawable/blue_rounded_button"
+                android:onClick="setSubmitPassword"
+                android:textColor="@color/white"
+                android:text="Unlock"
+
+                />
+
+        </LinearLayout> <!--Admin-->
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/background_material" />
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -83,7 +135,7 @@
                 android:paddingLeft="11dp"
                 android:paddingRight="4dp"
                 android:paddingTop="10dp"
-                android:visibility="invisible"
+                android:visibility="gone"
                 >
 
                 <TextView
@@ -95,7 +147,7 @@
                     android:background="@color/white"
                     android:maxLines="1"
                     android:padding="5dp"
-                    android:text="neato-deleto"
+                    android:text="Delete le Data"
                     android:textColor="@color/textMedium"
                     android:textSize="30dp"
                     android:visibility="visible"
@@ -122,9 +174,11 @@
         </LinearLayout> <!--Delete le Data-->
 
         <ImageView
+            android:id="@+id/disappearSettings"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/background_material" />
+            android:background="@color/background_material"
+            />
 
         <LinearLayout
             android:id="@+id/stillEnabler"
@@ -136,7 +190,7 @@
             android:paddingLeft="11dp"
             android:paddingRight="4dp"
             android:paddingTop="10dp"
-            android:visibility="invisible"
+            android:visibility="gone"
             >
 
             <TextView
