--- a/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/values/colors.xml
+++ b/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/values/colors.xml
@@ -6,10 +6,9 @@
     <!--forced-->
 
     <color name="darkBlue">#002699</color>
-    <color name="mediumBlue">#303f9f</color>
+    <color name="mediumBlue">#0D47A1</color>
     <color name="lightBlue">#4372ff</color>
     <color name="lighterBlue">#0095ff</color>
-
 
     <color name="divider">#c2c2c2</color>
     <color name="background_material">#d6d6d6</color>
@@ -21,9 +20,6 @@
     <color name="textLight">#b6b6b6</color>
     <color name="textWhite">#ffffff</color>
 
-
-
-
     <color name="allianceRed">#fa2d2d</color>
     <color name="allianceBlue">#FF3366FF</color>
 
@@ -32,9 +28,4 @@
 
     <color name="stillGreen">#006e05</color>
 
-
-
-
-
-    <!--FF282828-->
 </resources>
