CSV system changed to xlsx. Files should now be seen when plugged into a computer

--- a/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/layout/activity_home__screen.xml
+++ b/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/layout/activity_home__screen.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_material">
@@ -44,6 +42,7 @@
                 android:maxLines="1"
                 android:padding="5dp"
                 android:text="Match Scouter"
+                android:textStyle="italic"
                 android:textColor="@color/textMedium"
                 android:textSize="30dp"
 
@@ -90,6 +89,7 @@
                 android:maxLines="1"
                 android:padding="5dp"
                 android:text="Generate QR"
+                android:textStyle="italic"
                 android:textColor="@color/textMedium"
                 android:textSize="30dp"
 
@@ -139,6 +139,7 @@
                 android:maxLines="1"
                 android:padding="5dp"
                 android:text="Master Scouter"
+                android:textStyle="italic"
                 android:textColor="@color/textMedium"
                 android:textSize="30dp"
 
@@ -184,6 +185,7 @@
                 android:maxLines="1"
                 android:padding="5dp"
                 android:text="Settings"
+                android:textStyle="italic"
                 android:textColor="@color/textMedium"
                 android:textSize="30dp"
 
