--- a/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/layout/activity_pre_match.xml
+++ b/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/layout/activity_pre_match.xml
@@ -96,6 +96,7 @@
                 android:maxLines="1"
                 android:padding="5dp"
                 android:text="Alliance Color"
+                android:textStyle="italic"
                 android:textColor="@color/textMedium"
                 android:textSize="30dp"
 
@@ -115,6 +116,15 @@
                 />
 
         </LinearLayout> <!--Alliance Selector-->
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:background="@drawable/field"
+            />
 
         <LinearLayout
             android:layout_width="match_parent"
