--- a/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/layout/activity_settings.xml
+++ b/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/layout/activity_settings.xml
@@ -48,6 +48,7 @@
                 android:text="Scouter"
                 android:textColor="@color/textMedium"
                 android:textSize="30dp"
+                android:textStyle="italic"
 
                 />
 
@@ -65,6 +66,53 @@
                 />
 
         </LinearLayout> <!--Scouter Selection-->
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/background_material" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_corners_chunk_material"
+            android:orientation="horizontal"
+            android:paddingBottom="10dp"
+            android:paddingLeft="11dp"
+            android:paddingRight="4dp"
+            android:paddingTop="10dp"
+
+            >
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_gravity="center"
+                android:layout_marginRight="8dp"
+                android:layout_weight=".7"
+                android:background="@color/white"
+                android:text="Scored Adds Attempt"
+                android:textSize="30dp"
+                android:textStyle="italic"
+                android:padding="5dp"
+                android:textColor="@color/textMedium" />
+
+            <ToggleButton
+                android:id="@+id/scoredAddsAttempt"
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_weight=".3"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:background="@drawable/toggle_button_at"
+                android:onClick="setScoredAddsAttempt"
+                android:textColor="@color/white"
+                android:textOff="No"
+                android:textOn="Yes"
+
+                />
+
+        </LinearLayout> <!--Admin-->
 
         <ImageView
             android:layout_width="match_parent"
@@ -148,6 +196,7 @@
                     android:maxLines="1"
                     android:padding="5dp"
                     android:text="Stats for Nerds"
+                    android:textStyle="italic"
                     android:textColor="@color/textMedium"
                     android:textSize="30dp"
                     android:visibility="visible"
@@ -207,7 +256,8 @@
                     android:background="@color/white"
                     android:maxLines="1"
                     android:padding="5dp"
-                    android:text="Delete le Data"
+                    android:text="Delete \'Le Data\'"
+                    android:textStyle="italic"
                     android:textColor="@color/textMedium"
                     android:textSize="30dp"
                     android:visibility="visible"
