--- a/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/drawable/toggle_button_at.xml
+++ b/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/drawable/toggle_button_at.xml
@@ -1,6 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="false" android:drawable="@color/mediumBlue"  />
-    <item android:state_checked="true" android:drawable="@color/lightBlue"  />
-</selector>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <selector>
+            <item android:state_checked="false">
+                <shape>
+                    <solid android:color="@color/mediumBlue" />
+                    <stroke
+                        android:width="1dip"
+                        android:color="@color/mediumBlue" />
+                    <corners android:radius="2dip" />
+                    <padding
+                        android:bottom="0dip"
+                        android:left="0dip"
+                        android:right="0dip"
+                        android:top="0dip" />
+                </shape>
+            </item>
+
+            <item android:state_checked="true">
+                <shape>
+                    <solid android:color="@color/lightBlue" />
+                    <stroke
+                        android:width="1dip"
+                        android:color="@color/lightBlue" />
+                    <corners android:radius="2dip" />
+                    <padding
+                        android:bottom="0dip"
+                        android:left="0dip"
+                        android:right="0dip"
+                        android:top="0dip" />
+                </shape>
+            </item>
+        </selector>
+    </item>
+
+</layer-list>
+
+
+
+
+
+
