--- a/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/layout/activity_post_match.xml
+++ b/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/layout/activity_post_match.xml
@@ -99,7 +99,7 @@
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
                 android:layout_weight=".3"
-                android:background="@drawable/toggle_button_at"
+                android:background="@drawable/toggle_button_at_no_round"
                 android:onClick="setDisabled"
                 android:textColor="@color/white"
                 android:textOff="Not Disabled"
@@ -146,11 +146,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Very fast, bad drivers, fast cube intake, a nice haiku, etc."
-                android:maxHeight="120dp"
-                android:maxLines="1"
-                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890. "
+                android:maxLines="4"
+                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890./#)(: "
                 android:maxLength="300"
-                android:padding="16dp" />
+                android:padding="8dp" />
 
         </LinearLayout> <!--Comments-->
 
