--- a/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/values/colors.xml
+++ b/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorPrimary">#1565C0</color>
     <!--forced-->
 
-    <color name="darkBlue">#0D47A1</color>
+    <color name="darkBlue">#0d47a1</color>
     <color name="mediumBlue">#1976D2</color>
     <color name="lightBlue">#2196F3</color>
     <color name="lighterBlue">#64B5F6</color>
@@ -28,4 +28,5 @@
 
     <color name="stillGreen">#006e05</color>
 
+    <color name="qrBlue">#006e05</color>
 </resources>
