Wisconsin Regional Push

--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_autonteleop.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_autonteleop.xml
@@ -1231,7 +1231,7 @@
                             android:layout_marginBottom="12dp"
                             android:buttonTint="@color/lightBlue"
                             android:onClick="setElevated"
-                            android:text="Elevated"
+                            android:text="Climbing"
                             android:textColor="@color/textMedium"
                             android:textSize="26dp"
                             tools:ignore="HardcodedText,SpUsage" />
