--- a/YaBoiinthePits/YaBointhePits/src/main/res/layout/activity_home_screen.xml
+++ b/YaBoiinthePits/YaBointhePits/src/main/res/layout/activity_home_screen.xml
@@ -97,7 +97,7 @@
                 android:layout_height="fill_parent"
                 android:layout_weight=".25"
                 android:background="@color/mediumBlue"
-                android:onClick="setGoToGenExcel"
+                android:onClick="setGenerateCSV"
                 android:textColor="@color/white"
                 android:text=">"
                 android:textSize="30dp"
